--- a/templates/bounties/detail.html
+++ b/templates/bounties/detail.html
@@ -30,7 +30,7 @@
         </div>
         <div class="panel-body">
           <div class="row">
-            <div class="col-md-2">
+            <div class="col-xs-2">
               <a href="{{ bounty.destination_armory }}" target="_blank">
                 {% if not bounty.is_target_guild %}
                   <div class="target"></div>
@@ -38,7 +38,7 @@
                 <img class="img-rounded pull-left" src="{{ bounty.destination_thumbnail }}" onerror="this.onerror = null; this.src='{{ bounty.destination_thumbnail_fallback }}'">
               </a>
             </div>
-            <div class="col-md-10">
+            <div class="col-xs-10">
               <dl class="dl-horizontal bounty-detail">
                 {% if bounty.is_target_guild %}
                   <dt>{% trans "Note" %}</dt>
