--- a/templates/footer.html
+++ b/templates/footer.html
@@ -4,6 +4,10 @@
     <hr>
     Bounty-O-Matic <span class="hidden-xs hidden-sm">{% trans "for" %} World of Warcraft {% trans "by" %} Bodoc-Conseil des Ombres - contact@bounty-o-matic.com<small class="pull-right">{% if user.is_authenticated %}{% if user.is_staff %}<a class="danger-text" href="/admin">{% trans "Admin" %}</a> | {% endif %}<span id="refresh"><a id="refresh-link" class="footer-refresh" href="#">{% trans "Refresh your BattleNet data" %} |</a></span> {% endif %}<a class="updates" href="{% url 'updates' %}">0.3 (Le Écrou)</a></small>
   </div>
+  <div class="col-md-12">
+    <hr>
+    Sponsorisé par Lothlunaë-CultedelaRivenoire des <a href="http://www.wrynn.org/" target="_blank">Mercenaires de Wrynn</a> - <a href="mailto:lothlunae@wrynn.org">lothlunae@wrynn.org</a>
+  </div>
 </div>
 <div class="row">
   <div class="col-md-12">
