--- a/templates/home/help.html
+++ b/templates/home/help.html
@@ -21,7 +21,7 @@
 	</div>
 	<div class="col-md-6">
 		<h3>{% trans "Who is behind Bounty-O-Matic?" %}</h3>
-		<p>{% blocktrans %}I'm Bodoc, mighty warrior of "La Compagnie Bras Cassé" (EU - Culte de la Rive Noire). In real life, I'm <a href="http://socketubs.org" target="_blank">Geoffrey</a>, Python web developer and World of Warcraft player since 10 years.<br>More questions? You can reach me via email:{% endblocktrans %} <a href="mailto:contact@bounty-o-matic.com">contact@bounty-o-matic.com</a></p>
+		<p>{% blocktrans %}I'm Bodoc, mighty warrior of "La Compagnie Bras Cassé" (EU - Culte de la Rive Noire). In real life, I'm <a href="http://socketubs.org" target="_blank">toxinu</a>, Python web developer and World of Warcraft player since 10 years.<br>More questions? You can reach me via email:{% endblocktrans %} <a href="mailto:contact@bounty-o-matic.com">contact@bounty-o-matic.com</a></p>
 	</div>
 </div>
 {% endblock %}
